--- a/code/index.html
+++ b/code/index.html
@@ -2,8 +2,8 @@
         <head>
         </head>
             <body>
-                 <img src"../image/sun.jpg>
-                   <img src"../image/mountain.jpg>
-                     <img src"../image/skiing.jpg>
+                 <img src"../image/sun.jpg">
+                   <img src"../image/mountain.jpg">
+                     <img src"../image/skiing.jpg">
             </body>
     </html>
